--- a/src/main/webapp/dashboard-mockup/barGraphHorizontal.html
+++ b/src/main/webapp/dashboard-mockup/barGraphHorizontal.html
@@ -60,16 +60,16 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-    data = [{label:"CDK5",pvalue:4.1089403232349536E-4,"zscore":-2.071791427191609,"combinedScore":16.154120747290097,"enrichedSubstrates":["NR3C1","CDK5RAP1","TLN1","STXBP2","KALRN","SIPA1L1","CABLES1"]},
-            {label:"MAPK10",pvalue:0.020638231834273078,"zscore":-1.9350437687825957,"combinedScore":7.5091502169570195,"enrichedSubstrates":["NR3C1","LIFR","RBM39","NAP1L1","RPS6KB1"]},
-            {label:"PDPK1",pvalue:0.025965526172490958,"zscore":-1.9089208780487765,"combinedScore":6.969442517431054,"enrichedSubstrates":["PRKACA","CDAN1","RPS6KB1"]},
-            {label:"PDK1",pvalue:0.06452198221675895,"zscore":-1.6612098008593776,"combinedScore":4.5529596049727985,"enrichedSubstrates":["PRKACA","RPS6KB1"]},
-            {label:"TRIM24",pvalue:0.12591260931125214,"zscore":-1.4096780795523849,"combinedScore":2.92108866429211,"enrichedSubstrates":["NR3C1","EXOSC4","CRADD"]},
-            {label:"ATM",pvalue:0.19399375234783794,"zscore":-1.5214506950391264,"combinedScore":2.495071611077602,"enrichedSubstrates":["NR3C1","USP34","CAT","KLF1"]},
-            {label:"FYN",pvalue:0.30181334991368114,"zscore":-0.7641789369572446,"combinedScore":0.9154454823822123,"enrichedSubstrates":["KDR","SF1","CD55","NR3C1"]},
-            {label:"UHMK1",pvalue:0.16326563430898777,"zscore":-0.44622781397378514,"combinedScore":0.8087329135940245,"enrichedSubstrates":["SF1"]},
-            {label:"FLT4",pvalue:0.15252877740404056,"zscore":-0.38522374619872457,"combinedScore":0.724375501431373,"enrichedSubstrates":["KDR"]},
-            {label:"PRKDC",pvalue:0.33374976102038123,"zscore":-0.6511085574426748,"combinedScore":0.7145029512441574,"enrichedSubstrates":["NR3C1","C1D","KLF1","RPS6KB1"]}];
+    data = [{"name":"CDK5","pvalue":4.1089403232349536E-4,"zscore":-2.071791427191609,"combinedScore":16.154120747290097,"enrichedSubstrates":["NR3C1","CDK5RAP1","TLN1","STXBP2","KALRN","SIPA1L1","CABLES1"]},
+            {"name":"MAPK10","pvalue":0.020638231834273078,"zscore":-1.9350437687825957,"combinedScore":7.5091502169570195,"enrichedSubstrates":["NR3C1","LIFR","RBM39","NAP1L1","RPS6KB1"]},
+            {"name":"PDPK1","pvalue":0.025965526172490958,"zscore":-1.9089208780487765,"combinedScore":6.969442517431054,"enrichedSubstrates":["PRKACA","CDAN1","RPS6KB1"]},
+            {"name":"PDK1","pvalue":0.06452198221675895,"zscore":-1.6612098008593776,"combinedScore":4.5529596049727985,"enrichedSubstrates":["PRKACA","RPS6KB1"]},
+            {"name":"TRIM24","pvalue":0.12591260931125214,"zscore":-1.4096780795523849,"combinedScore":2.92108866429211,"enrichedSubstrates":["NR3C1","EXOSC4","CRADD"]},
+            {"name":"ATM","pvalue":0.19399375234783794,"zscore":-1.5214506950391264,"combinedScore":2.495071611077602,"enrichedSubstrates":["NR3C1","USP34","CAT","KLF1"]},
+            {"name":"FYN","pvalue":0.30181334991368114,"zscore":-0.7641789369572446,"combinedScore":0.9154454823822123,"enrichedSubstrates":["KDR","SF1","CD55","NR3C1"]},
+            {"name":"UHMK1","pvalue":0.16326563430898777,"zscore":-0.44622781397378514,"combinedScore":0.8087329135940245,"enrichedSubstrates":["SF1"]},
+            {"name":"FLT4","pvalue":0.15252877740404056,"zscore":-0.38522374619872457,"combinedScore":0.724375501431373,"enrichedSubstrates":["KDR"]},
+            {"name":"PRKDC","pvalue":0.33374976102038123,"zscore":-0.6511085574426748,"combinedScore":0.7145029512441574,"enrichedSubstrates":["NR3C1","C1D","KLF1","RPS6KB1"]}];
 
 
     var div = d3.select("body").append("div").attr("class", "toolTip");
@@ -83,7 +83,7 @@
             barPadding = (height-axisMargin-margin*2)*0.6/data.length,
             data, bar, svg, scale, xAxis, labelWidth = 0;
 
-    max = d3.max(data, function(d) { return d.pvalue; });
+    max = d3.max(data, function(d) { return d["pvalue"]; });
 
     svg = d3.select('body')
             .append("svg")
@@ -107,7 +107,7 @@
             .attr("y", barHeight / 2)
             .attr("dy", ".35em") //vertical align middle
             .text(function(d){
-                return d.label;
+                return d["name"];
             }).each(function() {
         labelWidth = Math.ceil(Math.max(labelWidth, this.getBBox().width));
     });
@@ -125,7 +125,7 @@
             .attr("transform", "translate("+labelWidth+", 0)")
             .attr("height", barHeight)
             .attr("width", function(d){
-                return scale(d.pvalue);
+                return scale(d["pvalue"]);
             });
 
     bar.append("text")
@@ -135,11 +135,11 @@
             .attr("dy", ".35em") //vertical align middle
             .attr("text-anchor", "end")
             .text(function(d){
-                return (d.pvalue);
+                return (d["pvalue"]);
             })
             .attr("x", function(d){
                 var width = this.getBBox().width;
-                return Math.max(width + valueMargin, scale(d.pvalue));
+                return Math.max(width + valueMargin, scale(d["pvalue"]));
             });
 
     bar
@@ -147,7 +147,7 @@
                 div.style("left", d3.event.pageX+10+"px");
                 div.style("top", d3.event.pageY-25+"px");
                 div.style("display", "inline-block");
-                div.html((d.label)+"<br>"+(d.pvalue));
+                div.html((d["name"])+"<br>"+(d["pvalue"]));
             });
     bar
             .on("mouseout", function(d){
