--- a/src/main/webapp/dashboard-mockup/network.html
+++ b/src/main/webapp/dashboard-mockup/network.html
@@ -46,7 +46,7 @@
 
     var force = d3.layout.force()
         .charge(-120)
-        .linkDistance(30)
+        .linkDistance(50)
         .size([width, height]);
 
     var svg = d3.select("body").append("svg")
@@ -71,7 +71,7 @@
 
         .enter().append("circle")
           .attr("class", "node")
-          .attr("r", 5)
+          .attr("r", 10)
           .style("fill", function(d) { return color(d.group); })
           .call(force.drag);
 
@@ -82,7 +82,7 @@
          .data(graph.nodes)
          .enter().append("text")
          .attr("class", "label")
-         .attr("fill", "black")
+         .attr("fill", "white")
          .attr("dx", -3)
       	.attr("dy", ".35em")
          .text(function(d) {  return d.id;  });
