--- a/src/main/webapp/bootstrap-frontend/index.html
+++ b/src/main/webapp/bootstrap-frontend/index.html
@@ -988,12 +988,13 @@
     <!--Case studies-->
     <div class="tab-pane fade" id="nav-case" role="tabpanel" aria-labelledby="nav-case-tab">
         <div class="row justify-content-center">
-            <div id="ljp" class="col-sm-7 text-left my-3">
+            <div id="ljp" class="col-sm-7 text-left my-3 mt-5">
                 <table id="ljp-table" class="table table-striped table-bordered table-sm">
                     <thead>
                     <tr>
-                        <th>Signature</th>
+                        <th>Batch</th>
                         <th>Perturbation</th>
+                        <th>Drug</th>
                         <th>Dose, μM</th>
                         <th>Time, hours</th>
                         <th>Celline</th>
@@ -1002,8 +1003,9 @@
                     </thead>
                     <tfoot>
                     <tr>
-                        <th></th>
+                        <th>Batch</th>
                         <th>Perturbation</th>
+                        <th>Drug</th>
                         <th>Dose, μM</th>
                         <th>Time, hours</th>
                         <th>Celline</th>
@@ -1011,6 +1013,9 @@
                     </tr>
                     </tfoot>
                 </table>
+            </div>
+            <div class="col-sm-5 mt-5">
+            	<textarea class="form-control form-control-sm" id="ljp-genelist" rows="3" name="text-genes"></textarea>
             </div>
         </div>
     </div>
