--- a/src/main/webapp/bootstrap-frontend/index.html
+++ b/src/main/webapp/bootstrap-frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <link rel="stylesheet" href="css/index.css">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -15,17 +15,23 @@
     <!--Datatables imports-->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.4.2/css/buttons.bootstrap4.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.3/css/fixedHeader.bootstrap4.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.0/css/responsive.bootstrap4.css"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/fixedheader/3.1.3/css/fixedHeader.bootstrap4.css"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/responsive/2.2.0/css/responsive.bootstrap4.css"/>
 
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.bootstrap4.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/fixedheader/3.1.3/js/dataTables.fixedHeader.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.js"></script>
+    <script type="text/javascript"
+            src="https://cdn.datatables.net/fixedheader/3.1.3/js/dataTables.fixedHeader.js"></script>
+    <script type="text/javascript"
+            src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.js"></script>
 
     <!--Own-->
+    <link rel="stylesheet" href="css/index.css">
+    
     <script src="js/index.js"></script>
     <script src="js/ljp.js"></script>
 </head>
@@ -75,37 +81,30 @@
         <div class="col-sm-7 text-left">
             <div class="row">
                 <div class="col-sm-6 mt-3">
-                    <label for="genelist">Gene list</label>
-                    <textarea class="form-control form-control-sm" id="genelist" rows="3" name="text-genes"></textarea>
+                    <label for="genelist">Gene list (<a href="#" onclick="return insertExample();" id="example-link">insert an example</a>)</label>
+                    <textarea class="form-control form-control-sm" id="genelist" rows="12" name="text-genes"></textarea>
                 </div>
                 <div class="col-sm-6 my-5">
                     <p id="x2k-desc" class="desc">
                         X2K Web infers upstream regulatory networks from differentially expressed genes.
                         It integrates ChIP-Seq/Chip data, position weight matrices, protein–protein
                         interactions and kinase–substrate phosphorylation data from ChEA, KEA and G2N apps.
-                        <a href="#" onclick="return insertExample();">Try an example gene list.</a>
                     </p>
                     <p id="chea-desc" class="desc" style="display: none;">
                         ChEA identifies upstream transcription factors. It uses
                         gene set enrichment for transcription factors likely to bind at the promoters of the
                         differentilly expressed genes based on integration of publicly available ChIP-seq data.
-                        <a href="#" onclick="return insertExample();">Try an example gene list.</a>
                     </p>
                     <p id="g2n-desc" class="desc" style="display: none;">
                         G2N generates protein-protein interaction network of input transcription factors
                         connected with each other by using known protein-protein interactions.
-                        <a href="#" onclick="return insertExample();">Try an example gene list.</a>
                     </p>
                     <p id="kea-desc" class="desc" style="display: none;">
                         KEA uses kinase-substrate libraries to predict
                         protein kinases connected to intermediate proteins and transcription factors
                         that putatively regulate the observed changes in mRNA expression and perform kinase enrichment
                         analysis.
-                        <a href="#" onclick="return insertExample();">Try an example gene list.</a>
                     </p>
-                    <div id="case-desc" class="desc" style="display: none;">
-                        <p>LINCS Joint Project (LJP)</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -987,9 +986,10 @@
 
     <!--Case studies-->
     <div class="tab-pane fade" id="nav-case" role="tabpanel" aria-labelledby="nav-case-tab">
+        <h4 class="text-center my-3">LINCS Joint Project</h4>
         <div class="row justify-content-center">
-            <div id="ljp" class="col-sm-7 text-left my-3 mt-5">
-                <table id="ljp-table" class="table table-striped table-bordered table-sm">
+            <div id="ljp" class="col-sm-7 text-left my-3">
+                <table id="ljp-table" class="display table table-striped table-bordered table-sm" cellspacing="0">
                     <thead>
                     <tr>
                         <th>Batch</th>
@@ -1014,8 +1014,9 @@
                     </tfoot>
                 </table>
             </div>
-            <div class="col-sm-5 mt-5">
-            	<textarea class="form-control form-control-sm" id="ljp-genelist" rows="3" name="text-genes"></textarea>
+            <div class="col-sm-3 mt-3">
+                <textarea class="form-control form-control-sm" id="ljp-genelist" rows="10"
+                          name="ljp-text-genes"></textarea>
             </div>
         </div>
     </div>
