Fixed endpoints for sumbit

--- a/src/main/webapp/bootstrap-frontend/index.html
+++ b/src/main/webapp/bootstrap-frontend/index.html
@@ -2062,6 +2062,11 @@ C1d' \
             <div class="col-sm-3 mt-3">
                 <textarea class="form-control form-control-sm" id="ljp-genelist" rows="10"
                           name="ljp-text-genes"></textarea>
+                <div class="my-3">
+                    <button type="submit" class="btn btn-outline-primary btn-sm" id="results_submit_ljp">
+                        Submit
+                    </button>
+                </div>
             </div>
         </div>
     </div>
