--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
+	<!-- Highlight JS -->
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+
     <!--Datatables imports-->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.4.2/css/buttons.bootstrap4.css"/>
@@ -77,7 +82,7 @@
 <!--Body-->
 <div class="tab-content container-fluid" id="nav-tabContent">
     <!--X2K-->
-    <div class="row justify-content-center" id="analysis-row">
+<!--     <div class="row justify-content-center" id="analysis-row">
         <div class="col-sm-7 text-left">
             <div class="row">
                 <div class="col-sm-6 mt-3">
@@ -109,7 +114,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="tab-pane fade show active settings" id="nav-x2k" role="tabpanel" aria-labelledby="nav-x2k-tab">
         <div class="row justify-content-center">
@@ -117,6 +122,35 @@
                 <form id="x2k-form" enctype="multipart/form-data" method="POST">
                     <div class="form-group">
                         <div class="row">
+
+                <div class="col-sm-6 mt-3">
+                    <label for="genelist">Gene list (<a href="#" onclick="return insertExample();" id="example-link">insert
+                        an example</a>)</label>
+                    <textarea class="form-control form-control-sm" id="genelist" rows="12" name="text-genes"></textarea>
+                </div>
+                <div class="col-sm-6 my-5">
+                    <p id="x2k-desc" class="desc">
+                        X2K Web infers upstream regulatory networks from differentially expressed genes.
+                        It integrates ChIP-Seq/Chip data, position weight matrices, protein–protein
+                        interactions and kinase–substrate phosphorylation data from ChEA, KEA and G2N apps.
+                    </p>
+                    <p id="chea-desc" class="desc" style="display: none;">
+                        ChEA identifies upstream transcription factors. It uses
+                        gene set enrichment for transcription factors likely to bind at the promoters of the
+                        differentilly expressed genes based on integration of publicly available ChIP-seq data.
+                    </p>
+                    <p id="g2n-desc" class="desc" style="display: none;">
+                        G2N generates protein-protein interaction network of input transcription factors
+                        connected with each other by using known protein-protein interactions.
+                    </p>
+                    <p id="kea-desc" class="desc" style="display: none;">
+                        KEA uses kinase-substrate libraries to predict
+                        protein kinases connected to intermediate proteins and transcription factors
+                        that putatively regulate the observed changes in mRNA expression and perform kinase enrichment
+                        analysis.
+                    </p>
+                </div>
+                        
                             <div class="col-sm-6 my-3">
                                 <!--Buttons-->
                                 <div class="my-3">
@@ -1507,7 +1541,7 @@
 
                 <div id="api-example" class="">
                     <div class="row">
-                        <div class="card col-sm-6">
+                        <div class="card col-sm-8 my-1">
                             <div class="panel-group" id="accordion-api" role="tablist" aria-multiselectable="true">
                                 <div class="panel panel-default">
                                     <div class="panel-heading" role="tab" id="heading1">
@@ -1520,9 +1554,7 @@
                                     <div id="collapse1" class="panel-collapse collapse" role="tabpanel"
                                          aria-labelledby="heading1">
                                         <div class="panel-body">
-                                            <p>   <textarea rows=20 readonly disabled
-                                                            style="width:100%; font-family:monospace;">
-var form = new FormData();
+                                        <pre><code class="javascript">var form = new FormData();
 form.append("text-genes", "Nsun3\nPolrmt\nNlrx1\nSfxn5\nZc3h12c\nSlc25a39\nArsg\nDefb29\nNdufb6\nZfand1\nTmem77\n5730403B10Rik\nRP23-195K8.6\nTlcd1\nPsmc6\nSlc30a6\nLOC100047292\nLrrc40\nOrc5l\nMpp7\nUnc119b\nPrkaca\nTcn2\nPsmc3ip\nPcmtd2\nAcaa1a\nLrrc1\n2810432D09Rik\nSephs2\nSac3d1\nTmlhe\nLOC623451\nTsr2\nPlekha7\nGys2\nArhgef12\nHibch\nLyrm2\nZbtb44\nEntpd5\nRab11fip2\nLipt1\nIntu\nAnxa13\nKlf12\nSat2\nGal3st2\nVamp8\nFkbpl\nAqp11\nTrap1\nPmpcb\nTm7sf3\nRbm39\nBri3\nKdr\nZfp748\nNap1l1\nDhrs1\nLrrc56\nWdr20a\nStxbp2\nKlf1\nUfc1\nCcdc16\n9230114K14Rik\nRwdd3\n2610528K11Rik\nAco1\nCables1\nLOC100047214\nYars2\nLypla1\nKalrn\nGyk\nZfp787\nZfp655\nRabepk\nZfp650\n4732466D17Rik\nExosc4\nWdr42a\nGphn\n2610528J11Rik\n1110003E01Rik\nMdh1\n1200014M14Rik\nAW209491\nMut\n1700123L14Rik\n2610036D13Rik\nCox15\nTmem30a\nNsmce4a\nTm2d2\nRhbdd3\nAtxn2\nNfs1\n3110001I20Rik\nBC038156\nLOC100047782\n2410012H22Rik\nRilp\nA230062G08Rik\nPttg1ip\nRab1\nAfap1l1\nLyrm5\n2310026E23Rik\nC330002I19Rik\nZfyve20\nPoli\nTomm70a\nSlc7a6os\nMat2b\n4932438A13Rik\nLrrc8a\nSmo\nNupl2\nTrpc2\nArsk\nD630023B12Rik\nMtfr1\n5730414N17Rik\nScp2\nZrsr1\nNol7\nC330018D20Rik\nIft122\nLOC100046168\nD730039F16Rik\nScyl1\n1700023B02Rik\n1700034H14Rik\nFbxo8\nPaip1\nTmem186\nAtpaf1\nLOC100046254\nLOC100047604\nCoq10a\nFn3k\nSipa1l1\nSlc25a16\nSlc25a40\nRps6ka5\nTrim37\nLrrc61\nAbhd3\nGbe1\nParp16\nHsd3b2\nEsm1\nDnajc18\nDolpp1\nLass2\nWdr34\nRfesd\nCacnb4\n2310042D19Rik\nSrr\nBpnt1\n6530415H11Rik\nClcc1\nTfb1m\n4632404H12Rik\nD4Bwg0951e\nMed14\nAdhfe1\nThtpa\nCat\nEll3\nAkr7a5\nMtmr14\nTimm44\nSf1\nIpp\nIah1\nTrim23\nWdr89\nGstz1\nCradd\n2510006D16Rik\nFbxl6\nLOC100044400\nZfp106\nCd55\n0610013E23Rik\nAfmid\nTmem86a\nAldh6a1\nDalrd3\nSmyd4\nNme7\nFars2\nTasp1\nCldn10\nA930005H10Rik\nSlc9a6\nAdk\nRbks\n2210016F16Rik\nVwce\n4732435N03Rik\nZfp11\nVldlr\n9630013D21Rik\n4933407N01Rik\nFahd1\nMipol1\n1810019D21Rik\n1810049H13Rik\nTfam\nPaics\n1110032A03Rik\nLOC100044139\nDnajc19\nBC016495\nA930041I02Rik\nRqcd1\nUsp34\nZcchc3\nH2afj\nPhf7\n4921508D12Rik\nKmo\nPrpf18\nMcat\nTxndc4\n4921530L18Rik\nVps13b\nScrn3\nTor1a\nAI316807\nAcbd4\nFah\nApool\nCol4a4\nLrrc19\nGnmt\nNr3c1\nSip1\nAscc1\nFech\nAbhd14a\nArhgap18\n2700046G09Rik\nYme1l1\nGk5\nGlo1\nSbk1\nCisd1\n2210011C24Rik\nNxt2\nNotum\nAnkrd42\nUbe2e1\nNdufv1\nSlc33a1\nCep68\nRps6kb1\nHyi\nAldh1a3\nMynn\n3110048L19Rik\nRdh14\nProz\nGorasp1\nLOC674449\nZfp775\n5430437P03Rik\nNpy\nAdh5\nSybl1\n4930432O21Rik\nNat9\nLOC100048387\nMettl8\nEny2\n2410018G20Rik\nPgm2\nFgfr4\nMobkl2b\nAtad3a\n4932432K03Rik\nDhtkd1\nUbox5\nA530050D06Rik\nZdhhc5\nMgat1\nNudt6\nTpmt\nWbscr18\nLOC100041586\nCdk5rap1\n4833426J09Rik\nMyo6\nCpt1a\nGadd45gip1\nTmbim4\n2010309E21Rik\nAsb9\n2610019F03Rik\n7530414M10Rik\nAtp6v1b2\n2310068J16Rik\nDdt\nKlhdc4\nHpn\nLifr\nOvol1\nNudt12\nCdan1\nFbxo9\nFbxl3\nHoxa7\nAldh8a1\n3110057O12Rik\nAbhd11\nPsmb1\nENSMUSG00000074286\nChpt1\nOxsm\n2310009A05Rik\n1700001L05Rik\nZfp148\n39509\nMrpl9\nTmem80\n9030420J04Rik\nNaglu\nPlscr2\nAgbl3\nPex1\nCno\nNeo1\nAsf1a\nTnfsf5ip1\nPkig\nAI931714\nD130020L05Rik\nCntd1\nClec2h\nZkscan1\n1810044D09Rik\nMettl7a\nSiae\nFbxo3\nFzd5\nTmem166\nTmed4\nGpr155\nRnf167\nSptlc1\nRiok2\nTgds\nPms1\nPitpnc1\nPcsk7\n4933403G14Rik\nEi24\nCrebl2\nTln1\nMrpl35\n2700038C09Rik\nUbie\nOsgepl1\n2410166I05Rik\nWdr24\nAp4s1\nLrrc44\nB3bp\nItfg1\nDmxl1\nC1d");
 form.append("included_organisms", "both");
 form.append("included_database", "ChEA 2015");
@@ -1560,8 +1592,7 @@ var settings = {
 
 $.ajax(settings).done(function (response) {
   console.log(response);
-});
-    </textarea></p>
+});</code></pre>
                                         </div>
                                     </div>
                                 </div>
@@ -1569,7 +1600,7 @@ $.ajax(settings).done(function (response) {
                         </div>
                     </div>
                     <div class="row">
-                        <div class="card col-sm-6">
+                        <div class="card col-sm-8 my-1">
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading2">
                                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
@@ -1581,9 +1612,7 @@ $.ajax(settings).done(function (response) {
                                 <div id="collapse2" class="panel-collapse collapse" role="tabpanel"
                                      aria-labelledby="heading2">
                                     <div class="panel-body">
-                                        <p><textarea rows=20 readonly disabled
-                                                     style="width:100%; font-family:monospace;">
-import http.client
+                                        <pre><code class="python">import http.client
 
 conn = http.client.HTTPConnection("amp.pharm.mssm.edu")
 
@@ -1599,15 +1628,14 @@ conn.request("POST", "/X2K/api", payload, headers)
 res = conn.getresponse()
 data = res.read()
 
-print(data.decode("utf-8"))
-    </textarea></p>
+print(data.decode("utf-8"))</code></pre>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="card col-sm-6">
+                        <div class="card col-sm-8 my-1">
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading3">
                                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
@@ -1619,9 +1647,7 @@ print(data.decode("utf-8"))
                                 <div id="collapse3" class="panel-collapse collapse" role="tabpanel"
                                      aria-labelledby="heading3">
                                     <div class="panel-body">
-                                        <p><textarea rows=20 readonly disabled
-                                                     style="width:100%; font-family:monospace;">
-curl -X POST \
+                                       <pre><code class="bash">curl -X POST \
   http://amp.pharm.mssm.edu/X2K/api \
   -H 'cache-control: no-cache' \
   -H 'content-type: multipart/form-data; boundary=----WebKitFormBoundary7MA4YWxkTrZu0gW' \
@@ -2018,8 +2044,7 @@ C1d' \
   -F snavi=true \
   -F number_of_results=50 \
   -F 'sort_tfs_by=combined score' \
-  -F 'sort_kinases_by=combined score'
-    </textarea></p>
+  -F 'sort_kinases_by=combined score'</code></pre>
                                     </div>
                                 </div>
                             </div>
