Tomcat's Catalina memory settings

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2057,7 +2057,7 @@ C1d' \
 
     <!--Case studies-->
     <div class="tab-pane fade" id="nav-case" role="tabpanel" aria-labelledby="nav-case-tab">
-        <h4 class="text-center my-3">LINCS Joint Project</h4>
+        <h4 class="text-center my-3"><a href="http://www.lincsproject.org/LINCS/ljp">LINCS Joint Project</a></h4>
         <div class="row justify-content-center">
             <div id="ljp" class="col-sm-7 text-left my-3">
                 <table id="ljp-table" class="display table table-striped table-bordered table-sm" cellspacing="0">
