Progress wheel and titles for Help sections

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -992,6 +992,7 @@
     <div class="tab-pane fade" id="nav-about" role="tabpanel" aria-labelledby="nav-about-tab">
         <div class="row justify-content-center">
             <div id="about" class="col-sm-7 text-left my-3">
+            <h4 class="text-center my-3">About</h4>
                 <p>
                     X2K Web is an online tool used to infer upstream regulatory
                     networks from differentially expressed genes. Combining the <a
@@ -1017,6 +1018,7 @@
     <div class="tab-pane fade" id="nav-api" role="tabpanel" aria-labelledby="nav-api-tab">
         <div class="row justify-content-center">
             <div id="api" class="col-sm-7 text-left my-3">
+            <h4 class="text-center my-3">API</h4>
                 <table class="table table-responsive table-sm">
                     <thead>
                     <tr>
@@ -2101,6 +2103,7 @@ C1d' \
     <div class="tab-pane fade" id="nav-commandline" role="tabpanel" aria-labelledby="nav-commandline-tab">
         <div class="row justify-content-center">
             <div id="commandline" class="col-sm-7 text-left my-3">
+            <h4 class="text-center my-3">Command line tools</h4>
                 You can download command line standalone versions of the X2K tools in JAR format.
                 Command near each download link suggests usage:
                 <p>
@@ -2142,6 +2145,7 @@ C1d' \
     <div class="tab-pane fade" id="nav-datasets" role="tabpanel" aria-labelledby="nav-datasets-tab">
         <div class="row justify-content-center">
             <div id="datasets" class="col-sm-7 text-left my-3">
+            <h4 class="text-center my-3">Datasets</h4>
                 <div class="row">
                     <div class="col-sm-4">
                         <h5>Protein-Protein Interaction</h5>
@@ -2182,14 +2186,17 @@ C1d' \
 <footer class="container-fluid" id="footer">
     <div class="row justify-content-center">
         <div class="col-sm-7" id="citations">
-            <p>Please cite this paper if you are using X2K for your publication:
+<!--             <p>Please cite this paper if you are using X2K for your publication:
                 <a href="http://www.ncbi.nlm.nih.gov/pubmed/22080467"> Chen EY, Xu
                     H, Gordonov S, Lim MP, Perkins MH, Ma'ayan A. Expression2Kinases:
                     mRNA Profiling Linked to Multiple Upstream Regulatory Layers.
-                    Bioinformatics. (2012) 28 (1): 105-111</a></p>
+                    Bioinformatics. (2012) 28 (1): 105-111</a></p> -->
         </div>
     </div>
 </footer>
 
+<!-- Loader -->
+<div id="loader"></div>
+<div id="blocker"></div>
 </body>
 </html>
