Datatables buttons and minor fixes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -197,13 +197,13 @@
                                                                                name="min_network_size">
                                                                     </div>
                                                                 </div>
-                                                                <div class="form-group row align-items-center">
+                                                                <div class="form-group row align-items-center" style="display:none">
                                                                     <label for="number_of_results"
                                                                            class="col-form-label col-sm-9">Number of
                                                                         results</label>
                                                                     <div class="col-sm-3">
                                                                         <input class="form-control form-control-sm"
-                                                                               type="text" value="10"
+                                                                               type="text" value="500"
                                                                                id="number_of_results"
                                                                                name="number_of_results">
                                                                     </div>
